kustomize/minio/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: minio 
spec: {}
status: {}
