kustomize/minio/overlays/prod/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-operator-dashboard
spec:
  ingressClassName: traefik
  rules:
  - host: minio-operator.tpi2.local
    http:
      paths:
      - backend:
          service:
            name: console 
            port:
              number: 9090
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
